MB-41089: HTTombstonePurger skips Pending stored-values

We would fail with ENOENT at commit/abort otherwise.

Change-Id: I4c5ef029d8a0bd998f39882aba0bc87a71ebf78e
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/139872
Tested-by: Build Bot <build@couchbase.com>
Well-Formed: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>